--- a/_config.yml
+++ b/_config.yml
@@ -56,9 +56,9 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
+  name   : "Famirol"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "Familienausflüge in Tirol mit den Öffis"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
