--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
-  - title: "Posts"
+  - title: "Ausflüge"
     url: /posts/
-  - title: "Categories"
+  - title: "Kategorien"
     url: /categories/
   - title: "Tags"
     url: /tags/
-  - title: "About"
+  - title: "Über"
     url: /about/
