--- a/_config.yml
+++ b/_config.yml
@@ -60,30 +60,12 @@ author:
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "Familienausflüge in Tirol mit den Öffis"
   links:
-    - label: "Website"
+    - label: "YouTube"
       icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://www.youtube.com/channel/UCeUDpF3lr0x2CgtsLokY1SQ"
+   
 
-footer:
-  links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+
 
 defaults:
   # _posts
