--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   bio    : "Familienausflüge in Tirol mit den Öffis"
   links:
     - label: "YouTube"
-      icon: "fas fa-fw fa-link"
+      icon: "fas fa-youtube"
       url: "https://www.youtube.com/channel/UCeUDpF3lr0x2CgtsLokY1SQ"
    
 
