--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Familien-Wanderungen in Tirol mit den Öffis
 search: true
 
+minimal_mistakes_skin: "dark"
+
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
@@ -71,8 +73,8 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
-      read_time: true
+      author_profile: false
+      read_time: false
       comments: true
       share: true
       related: true
