--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@ main:
   - title: "Ausflüge"
     url: /posts/
   - title: "Kategorien"
-    url: /categories/
+    url: /kategorien/
   - title: "Tags"
     url: /tags/
   - title: "Über"
