--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -13,7 +13,7 @@ keywords: Hugo, Bootstrap, Blog Theme
 # metaRobots: noindex, nofollow # Default value for Meta Tag robots
 # metaRobots:  # disable Meta Tag robots
 
-# logo: images/logo.png # Logo image. Default to images/logo.webp.
+logo: images/Famirol.jpg # Logo image. Default to images/logo.webp.
 # logo: false # Disable Logo
 brand: Famirol
 
