Powered by geändert

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -50,9 +50,9 @@ googleAdsense:
 # breadcrumbDivider: > # Breadcrumb divider
 # diagram: true
 # socialShare: false # disable social network sharing
-# searchBar: false # disable search-bar
+ searchBar: true # disable search-bar
 
-# poweredBy: false # Whether to show powered by.
+ poweredBy: false # Whether to show powered by.
 
 # readingTime: false # Whether to display the reading time.
 # postDate: false # Whether to display the post date in the post meta section.
